<resources>
    <string name="app_name">fifi</string>
    <string name="google_api_key">AIzaSyDkYeaLWfwed3tcUAfFnExGMjsE6MHdxfk</string>

    <string name="splash_text">Не полная версия! <br />Будет еще очень много всего нового</string>
    <string name="login_input_hint">Введите ваш никнайм или email</string>
    <string name="auth_label">Введите ваши данные для входа в ваш аккаунт</string>
    <string name="auth">Войти</string>
    <string name="not_have_account_yet">Ещё нет аккаунта?</string>
    <string name="password_hint">Введите ваш пароль</string>
    <string name="some_went_wrong">Что-то пошло не так! Попробуйте еще раз!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagine_password_hint">Придумайте ваш пароль</string>
    <string name="password_confirm_hint">Повторите пароль</string>
    <string name="nickname_hint">Придумайте ник найм</string>
    <string name="email_hint">Введите ваш email</string>
    <string name="next">Продолжить</string>
    <string name="register_label">Введите ваши реальные данные (ник найм можно придумать)</string>
    <string name="error_email">Введите корректный email</string>
    <string name="confirm_password_error">Пароли не совпадают</string>
</resources>