<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.auth.register.fragments.RegisterNamesFragment">

        <TextView
            android:id="@+id/register_label"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_42sdp"
            android:gravity="center"
            android:text="@string/register_label"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@id/email_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.30" />

        <EditText
            android:id="@+id/nickname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/nickname_hint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/email_input" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/imagine_password_hint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/nickname_input" />

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password_confirm_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/password_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_32sdp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>