<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.auth.auth.AuthActivity">

        <TextView
            android:id="@+id/auth_label"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_42sdp"
            android:gravity="center"
            android:text="@string/auth_label"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@id/email_or_login_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_or_login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/login_input_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/email_or_login_input" />

        <TextView
            android:id="@+id/not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/not_have_account_yet"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/password_input"
            app:layout_constraintTop_toBottomOf="@id/password_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/auth_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_32sdp"
            android:text="@string/auth"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>